--- a/index.html
+++ b/index.html
@@ -103,7 +103,35 @@
       width="100%" height="300" style="border:0;">
     </iframe>
   </section>
+<section id="location">
+  <h2>Visit Us</h2>
+  <p>123 Bean Street, Nairobi, Kenya</p>
+  <iframe 
+    src="https://maps.google.com/maps?q=nairobi&t=&z=13&ie=UTF8&iwloc=&output=embed"
+    width="100%" height="300" style="border:0;">
+  </iframe>
+</section>
 
+<!-- 👇 Contact form goes here -->
+<section id="contact">
+  <h2>Contact Us</h2>
+  <form action="https://formspree.io/f/mwkggzge" method="POST" class="contact-form">
+    <label for="name">Your Name</label>
+    <input type="text" id="name" name="name" required>
+
+    <label for="email">Your Email</label>
+    <input type="email" id="email" name="email" required>
+
+    <label for="message">Your Message</label>
+    <textarea id="message" name="message" rows="5" required></textarea>
+
+    <button type="submit">Send Message</button>
+  </form>
+</section>
+
+<footer>
+  <p>&copy; 2025 Brew Haven Coffee | Designed by Prince</p>
+</footer>
   <footer>
     <p>&copy; 2025 Brew Haven Coffee</p>
   </footer>
