--- a/index.html
+++ b/index.html
@@ -127,5 +127,31 @@
   <footer>
     <p>&copy; 2025 Brew Haven Coffee</p>
   </footer>
+ <script>
+  // Smooth scrolling effect (slower than CSS version)
+  document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener("click", function(e) {
+      e.preventDefault();
+      document.querySelector(this.getAttribute("href")).scrollIntoView({
+        behavior: "smooth",
+        block: "start"
+      });
+    });
+  });
+
+  // Fade-in animation
+  const sections = document.querySelectorAll("section");
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add("show");
+      }
+    });
+  }, { threshold: 0.2 });
+
+  sections.forEach(section => {
+    observer.observe(section);
+  });
+</script> 
 </body>
 </html>
