--- a/index.html
+++ b/index.html
@@ -145,6 +145,20 @@ header.show {
 
     <button type="submit">Send Message</button>
   </form>
+</section><section id="contact">
+  <h2>Contact Me</h2>
+  <form action="https://formspree.io/f/your-form-id" method="POST">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="_replyto" required>
+
+    <label for="message">Message:</label>
+    <textarea id="message" name="message" rows="5" required></textarea>
+
+    <button type="submit">Send Message</button>
+  </form>
 </section>
 
 <footer>
