--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ header.show {
 <!-- 👇 Contact form goes here -->
 <section id="contact">
   <h2>Contact Us</h2>
-  <form action="https://formspree.io/f/mwkggzge" method="POST" class="contact-form">
+  <form action="https://formspree.io/f/xkgvwqod method="POST" class="contact-form">
     <label for="name">Your Name</label>
     <input type="text" id="name" name="name" required>
 
