--- a/index.html
+++ b/index.html
@@ -131,33 +131,16 @@ header.show {
   </section>
 
 <!-- 👇 Contact form goes here -->
-<section id="contact">
-  <h2>Contact Us</h2>
-  <form action="https://formspree.io/f/xkgvwqod method="POST" class="contact-form">
-    <label for="name">Your Name</label>
-    <input type="text" id="name" name="name" required>
+<form action="https://formspree.io/f/xkgvwqod"method="POST">
+  <input type="text" name="name" placeholder="Your Name" required>
+  <input type="email" name="email" placeholder="Your Email" required>
+  <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
 
-    <label for="email">Your Email</label>
-    <input type="email" id="email" name="email" required>
+  <!-- Hidden input to show success message -->
+  <input type="hidden" name="_next" value="https://yourwebsite.com/thanks.html">
 
-    <label for="message">Your Message</label>
-    <textarea id="message" name="message" rows="5" required></textarea>
-
-    <button type="submit">Send Message</button>
-  </form>
-</section><section id="contact">
-  <h2>Contact Me</h2>
-  <form action="https://formspree.io/f/your-form-id" method="POST">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
-
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="_replyto" required>
-
-    <label for="message">Message:</label>
-    <textarea id="message" name="message" rows="5" required></textarea>
-
-    <button type="submit">Send Message</button>
+  <button type="submit">Send Message</button>
+</form>
   </form>
 </section>
 
