--- a/index.html
+++ b/index.html
@@ -203,5 +203,12 @@ header.show {
     document.querySelector("header").classList.add("show");
   });
 </script>
-</body>
+</body><!-- Hero Section -->
+<section id="hero">
+  <div class="hero-content">
+    <h1>Welcome to My Website</h1>
+    <p>Building cool projects, sharing ideas, and making the web awesome 🚀</p>
+    <a href="#contact" class="btn">Get in Touch</a>
+  </div>
+</section>
 </html>
