--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ header.show {
     document.querySelector("header").classList.add("show");
   });
 </script>
-</body><!-- Hero Section -->
+  <!-- Hero Section -->
 <section id="hero">
   <div class="hero-content">
     <h1>Welcome to My Website</h1>
@@ -211,4 +211,5 @@ header.show {
     <a href="#contact" class="btn">Get in Touch</a>
   </div>
 </section>
+</body>
 </html>
