--- a/index.html
+++ b/index.html
@@ -211,5 +211,6 @@ header.show {
     <a href="#contact" class="btn">Get in Touch</a>
   </div>
 </section>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </body>
 </html>
